[package]
authors = ["Sharad Chand <sharad.d.chand@gmail.com>"]
name = "mime-detective"
version = "0.2.3"
description = "The `MimeDetective` spies for the magic number of a file or buffer and spits out strongly typed Mimes."
license = "MIT"
documentation = "https://docs.rs/mime-detective"
homepage = "https://github.com/csharad/mime-detective"
repository = "https://github.com/csharad/mime-detective"
edition = "2018"

[dependencies]
magic = "0.12.2"
mime = "0.3.14"
